# notesv2

./: README.md  mydb.sqlite  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
4/electron-vite-react/: mydb.sqlite  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
4/electron-vite-react/src/: App.tsx  index.css  main.tsx  prosemirror.css
backend/: pyproject.toml
backend/backend/migrations/: env.py
backend/backend/offload/: app.py  query.py
backend2/: Pipfile  alembic.ini  app.py  database.py  query.py  service.py
backend2/migrations/versions/: 4e6288182e4c_chunk_has_user_id.py  53f7b0bac958_generate_initial_migration.py  605bfd864cc3_chunk_string.py  (+1 more)
backend2/offload/: app.py  models.py  query.py  schemas.py
dist-electron/main/: index.js  index.js.map
dist-electron/preload/: index.js
electron/main/: index.ts
electron/preload/: index.ts
frontend/: app.sqlite  dev.sqlite  mydb.sqlite  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/electronny/: index.d.ts
frontend/src/: App.tsx  prosemirror.css
main/: background.ts
main/helpers/: create-window.ts
renderer/: EditorContext.tsx  next.config.js  postcss.config.js  tailwind.config.js
renderer/components/: Editor.tsx  MenuItem.tsx  Menubar.tsx  Sidebar.tsx  Titlebar.tsx
renderer/hooks/: useEditor.tsx
renderer/pages/: _app.tsx  home.tsx
renderer/styles/: globals.css  prosemirror.css
src/: App.tsx  index.css  main.tsx
src/redux/: hooks.ts  store.ts
src/renderer/: App.tsx  EditorContext.tsx  index.css
src/theme/: useTheme.ts
(+79 files in other folders)
