[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rashad Philizaire <rashadphilizaire@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
supabase = "^1.0.3"
fastapi = "^0.100.1"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"
pgvector = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
